# agentguard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ci-hardening.md  hardening-semantics.md  rule-indexing.md
examples/: approval_example.py  async_approval_example.py  basic_usage.py  complete_pipeline_example.py  policy.yaml  wrapped_tool_example.py  yaml_policy_example.py
src/agentguard/: __init__.py  decision.py  exceptions.py  guard.py  policy_engine.py  request.py  tool_decorator.py  yaml_loader.py
src/guardian_angel/: __init__.py  exceptions.py  guard.py  rule.py
src/guardian_angel/cli/: app.py  evaluate.py  output.py
src/guardian_angel/core/: approval.py  config.py  decision.py  evaluator.py  exceptions.py  guard.py  policy_engine.py  predicates.py  request.py  tool_decorator.py  yaml_loader.py
tests/: test_approval.py  test_async_approval.py  test_hardening.py  test_policy_engine.py  test_tool_decorator.py  test_yaml_loader.py
