[project]
name = "agentguard"
version = "0.1.0"
description = "Policy engine for governing AI agent tool execution."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
keywords = ["agents", "policy", "ai", "governance", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
dependencies = ["pyyaml>=6.0", "aiofiles>=24.1"]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-asyncio>=0.24"]

[project.urls]
Homepage = "https://github.com/yourusername/agentguard"
Repository = "https://github.com/yourusername/agentguard"
Issues = "https://github.com/yourusername/agentguard/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentguard"]
